force-app/main/default/objects/Franchise__c/Franchise__c.object-meta.xml
<CustomObject>
    <label>Franchise</label>
    <nameField>
        <label>Franchise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>franchises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>