force-app/main/default/objects/Franchise__c/fields/Amnesia__c.field-meta.xml
<CustomField>
    <fullName>Amnesia__c</fullName>
    <label>Amnesia</label>
    <length>10</length>
    <type>Text</type>
</CustomField>