force-app/main/default/objects/Franchise__c/fields/Kfc__c.field-meta.xml
<CustomField>
    <fullName>Kfc__c</fullName>
    <label>Kfc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>