force-app/main/default/objects/Franchise__c/fields/Krishnapatnam__c.field-meta.xml
<CustomField>
    <fullName>Krishnapatnam__c</fullName>
    <label>Krishnapatnam</label>
    <length>10</length>
    <type>Text</type>
</CustomField>