force-app/main/default/objects/Franchise__c/fields/Kritunga__c.field-meta.xml
<CustomField>
    <fullName>Kritunga__c</fullName>
    <label>Kritunga</label>
    <length>10</length>
    <type>Text</type>
</CustomField>