force-app/main/default/objects/Franchise__c/fields/naturals__c.field-meta.xml
<CustomField>
    <fullName>naturals__c</fullName>
    <label>naturals</label>
    <length>10</length>
    <type>Text</type>
</CustomField>